[package]
name = "nrf24l01-commands"
version = "3.0.0"
edition = "2024"
authors = ["Remy Ni <ni.jingwei.2210@gmail.com>"]
description = "Register bitfield types for the nRF24L01+."
keywords = ["nrf24l01+", "nrf24l01p", "nrf24l01plus", "nrf24l01", "spi"]
categories = ["embedded", "no-std", "hardware-support"]
license = "MIT"
repository = "https://github.com/ghostlink0/nrf24l01-commands"
homepage = "https://github.com/ghostlink0/nrf24l01-commands"
readme = "README.md"
exclude = [".github"]

[dependencies]
bitfield-struct = "0.13.0"
